Reproduces Hagan numbers

--- a/work_logs.html
+++ b/work_logs.html
@@ -2,3 +2,6 @@
 <h2>Reproduce Hagan Example</h2>
 Creating this in simple_backprop.py, using Hagan example on p. 11-14 to 11-17.
 <p>
+Reproduced Hagan numbers.
+<p>
+
