Refactored simple two layer backprop and added test routine comparing to Hagan numerical example.

--- a/work_logs.html
+++ b/work_logs.html
@@ -4,4 +4,10 @@ Creating this in simple_backprop.py, using Hagan example on p. 11-14 to 11-17.
 <p>
 Reproduced Hagan numbers.
 <p>
-
+Refactored and created test case for simple two layer backprop using Hagan text.<br>
+Testing like:
+<pre>
+(nn_python2)
+[ytsboe@ytsboe-Latitude-E7250 ~/github/nn (master)]
+$ python ./test_simple_backprop.py
+</pre>
