Implemented reading of raw data and filling in the gaps and writing that "computer readable data" to disk.

--- a/work_logs.html
+++ b/work_logs.html
@@ -11,3 +11,15 @@ Testing like:
 [ytsboe@ytsboe-Latitude-E7250 ~/github/nn (master)]
 $ python ./test_simple_backprop.py
 </pre>
+<h2>Prepare data</h2>
+Fetched "raw" data from Digital Ocean site, put here: <tt>/home/ytsboe/data/boats/raw_data</tt>
+<p>
+Script to convert raw boat data to computer reabable:
+<tt>/home/ytsboe/github/nn/boats/raw_to_computer_readable.py</tt>
+<p>
+Here "computer readable" meamns ready for making plots etc., but before "cleaning" (removing outliers etc.)
+<p>
+
+
+
+ 
