Switched off writing to disk for raw_to_computer_readable and implemented test code to verify the same.

--- a/work_logs.html
+++ b/work_logs.html
@@ -19,6 +19,30 @@ Script to convert raw boat data to computer reabable:
 <p>
 Here "computer readable" meamns ready for making plots etc., but before "cleaning" (removing outliers etc.)
 <p>
+Tested fetching of data:
+<pre>
+Averages:
+length_over_all_meters: 11.5057620164
+width_meters: 3.61302763081
+build_year: 1993.74452986
+draft_meters: 1.75096601073
+displaces_kgs: 9198.89443652
+ballast_kgs: 3111.76237624
+engine_build_year: 1998.50480769
+
+Sums:
+  None: 1005.0
+  jeanneau: 122.0
+  etap: 37.0
+  contest: 37.0
+  beneteau: 98.0
+  hanse: 95.0
+  hallberg-rassy: 73.0
+  dehler: 60.0
+  dufour: 60.0
+  bavaria: 147.0
+</pre>
+All fine.
 
 
 
