Some updates on the data cuts.

--- a/work_logs.html
+++ b/work_logs.html
@@ -55,8 +55,12 @@ For example:
 The cuts will be:
 <p>
 <table border=1>
-  <tr>
-    <td>
+  <tr><td>
+      asking price
+    </td><td>
+      gt 1 and lt 1000000
+  </td></tr>
+  <tr><td>
       length
     </td><td>
       lt 30m
