--- a/work_logs.html
+++ b/work_logs.html
@@ -95,3 +95,9 @@ Stored the pdf with the plots here: <tt>/home/ytsboe/github/nn/boats/20160305_hi
 <p>
 Applied these cuts, plots have now better range: <tt>/home/ytsboe/github/nn/boats/20160305_histograms_cleaned.pdf</tt>
 <p>
+<h5 align=right>2016 mar 6</h5>
+Normalised the data, plots here:<br>
+<pre>
+[ytsboe@ytsboe-Latitude-E7250 ~/github/nn/boats (master)]
+$ cp feature_distributions.pdf 20160306_histograms_normalised.pdf
+</pre>
