Implemented simple backprop for boats, including interactive plotting of mean squared error.

--- a/work_logs.html
+++ b/work_logs.html
@@ -137,6 +137,6 @@ Average average price = -0.812876360256
 $ cp asking_price_builder_names.pdf 20160306_asking_price_builder_names.pdf
 </pre>
 Hallberg Rassy and Hanse boats are significantly more expensive than average.<br>
-The Compromis boats are least expensive.
+The Compromis boats are significantly less expensive.
 <p>
 
