Almost finished implementation of Levenberg-Marquard algorithm. Currently struggling with eq. (12.32), what the h*ll is v(x_k)?! Can't get the dimensions right ...

--- a/work_logs.html
+++ b/work_logs.html
@@ -238,6 +238,9 @@ The response values are similar, but not the same.<br>
 <p>
 After setting the learning rate to 0.01, it worked beautifully!
 <h3>Levenberg - Marquard</h3>
+What the bloody hell is <b>v</b>(<b>x</b>) in eq. (13.32)?!
+<p>
+Can't reconsiliate the dimensions of <b>v</b>(<b>x</b>) with those of Delta_<b>x</b> ...
 
 
 
