Open-heart-patient. Struggling with sensitivities.

--- a/work_logs.html
+++ b/work_logs.html
@@ -242,6 +242,17 @@ What the bloody hell is <b>v</b>(<b>x</b>) in eq. (13.32)?!
 <p>
 Can't reconsiliate the dimensions of <b>v</b>(<b>x</b>) with those of Delta_<b>x</b> ...
 
-
-
+<h5 align=right>2016 mar 12</h5>
+Previous problems fixed.
+<p>
+Now we obvserve the following:
+<p>
+After calculating the Jacobian and entering the iterative part to decrease the rms, we notice that the "peek" value for the rms converges exactly to the existing rms.<br>
+Why does it not go below ... ?
+<p>
+If the Jacobian is properly built, then eventually the rms must drop, even if by so little.
+<p>
+Hm, currently having big trouble finding out which s^m_(i,h) in eq. (12.43)
+maps to what element of S^m in eq. (12.48) ...
+<p>
 
