Added log message.

--- a/work_logs.html
+++ b/work_logs.html
@@ -255,4 +255,9 @@ If the Jacobian is properly built, then eventually the rms must drop, even if by
 Hm, currently having big trouble finding out which s^m_(i,h) in eq. (12.43)
 maps to what element of S^m in eq. (12.48) ...
 <p>
+<h5 align=right>2016 mar 14</h5>
+Fixed a bug and now we actually converge in little steps for Hagan case study I. :)
+<p>
+Still left to do: Walk again through the calculations of S and "get_mia", because with our current setup we have not been able to verify those calculations. We'd actually need data with multi dimensional output.
+<p>
 
