Taught the network to learn the identity for binary counting!

--- a/work_logs.html
+++ b/work_logs.html
@@ -275,7 +275,31 @@ Creating this in simple_backprop.py, using Hagan example on p. 11-14 to 11-17.
     </li>
   </ul>
 <p>
-  Now trying to understand why I don't seem to be able to teach the 1-N-3 network to express the numbers 1 to 8 in binary format ...
+  Now trying to understand why I don't seem to be able to teach the 1-N-3 network to express the numbers 1 to 8 in binary format ...<br>
+  <pre>python apps/binary_simple_test_levenberg_marquard.py</pre>
 <p>
-  
+  Brainstorming options:
+  <table border=1>
+    <tr>
+      <td><b>Option</b></td><td><b>Possible approach or solution</b></td>
+    </tr>
+    <tr>
+      <td>Error in Jacobian</td>
+      <td>
+        1. Work through binary problem again<br>
+        2. Find numerical code to verify<br>
+        3. ...
+      </td>
+    </tr>
+    <tr>
+      <td>Network cannot learn binary</td>
+      <td>
+        1. Can I understand why?<br>
+        2. Maybe try with 3-N-3 network (like in Mitchell fig. 4.7)<br>
+      </td>
+    </tr>
+    
+
+    
+  </table>
   
