Updated work log.

--- a/work_logs.html
+++ b/work_logs.html
@@ -295,11 +295,13 @@ Creating this in simple_backprop.py, using Hagan example on p. 11-14 to 11-17.
       <td>Network cannot learn binary</td>
       <td>
         1. Can I understand why?<br>
-        2. Maybe try with 3-N-3 network (like in Mitchell fig. 4.7)<br>
+        2. <b>Maybe try with 3-N-3 network (like in Mitchell fig. 4.7)</b><br>
       </td>
     </tr>
-    
-
-    
   </table>
+<p>
+  Tried with binary input and it work beautifully!
+<p>
+  So it was not possible to learn the network to count binary ... have to think why some more, but I now trust the LM algoritm! :)
+<p>
   
