Added some plotting. Cannot understand why the Bayesian regularisation does not work ... :(

--- a/work_logs.html
+++ b/work_logs.html
@@ -334,9 +334,13 @@ SUCCESS (Hagan 2-layer simple backprop)
   <b>But</b>: In our code, the Jacobian is calculated using the error. How
   does the Jacobian differ when using Levenberg-Marquard ... ?
   
-  
-  
-
-  
-  
+  <h5 align=right>2016 mar 23</h5>
+  <h3>Bayesian Regularisation does not work</h3>
+  Implemented it seemingly fine, but we cannot get it to visibly work.
+<p>
+  It seemed to work, using a "wrong" formula, which worked for the slow sinus,
+  but not for the Hagan case study I.
+<p>
+  Cannot reproduce the figure 13.7 in Hagan, our code just continues to overfit ... ?
+<p>
   
