More printouts, still struggling to understand why our Bayesian regularisation does not stabilise on values for alpha and beta ...

--- a/work_logs.html
+++ b/work_logs.html
@@ -343,4 +343,17 @@ SUCCESS (Hagan 2-layer simple backprop)
 <p>
   Cannot reproduce the figure 13.7 in Hagan, our code just continues to overfit ... ?
 <p>
+  <h5 align=right>2016 mar 24</h5>
+  With fixed regularisation, we are able to reproduce the plots of fig. 13.6 (Hagan) p. 13-10.
+<p>
+  Something is wrong with the Bayesian regularisation, when the expectation values stablise,
+  then F(x) converges to a fixed number, what would the stopping criterium be if F(x) does not
+  change ... ?
+<p>
+  Still no luck, found some papers about the determining alpha and beta, but they formulate
+  the procedure no more detailed than Hagan.
+<p>
+  ... ?
+
   
+    
