Exlamation in work log ...

--- a/work_logs.html
+++ b/work_logs.html
@@ -353,7 +353,9 @@ SUCCESS (Hagan 2-layer simple backprop)
   Still no luck, found some papers about the determining alpha and beta, but they formulate
   the procedure no more detailed than Hagan.
 <p>
-  ... ?
+  <h3>Why do alpha and beta not stabilise?!</h3>
+  
+    
 
   
     
