Created file for boats early-stopping and added top/bottom links to work log.

--- a/work_logs.html
+++ b/work_logs.html
@@ -1,3 +1,6 @@
+<a name="top"></a>
+<a href="#bottom">Bottom</a>
+
 <h5 align=right>2016 mar 5</h5>
 <h2>Reproduce Hagan Example</h2>
 Creating this in simple_backprop.py, using Hagan example on p. 11-14 to 11-17.
@@ -379,4 +382,16 @@ SUCCESS (Hagan 2-layer simple backprop)
 <p>
   Got it, had some extra unnecessary copying and transposition of the jacobian.
 <p>
-  
+  <h5 align=right>2016 mar 27</h5>
+  <h3>On to Levenberg-Marquard for the boats</h3>
+  Working in:
+  <pre>
+    (venv3)ytsen @ y700 ~/github/nn (master)
+    └─ $ ▶ cp boats/nn_simple_boats.py boats/nn_boats_lb_early_stopping.py 
+    (venv3)ytsen @ y700 ~/github/nn (master)
+  </pre>
+
+
+  <a name="bottom"></a>
+  <a href="#top">Top</a>
+    
