Implemented comparison with the OLS.

--- a/work_logs.html
+++ b/work_logs.html
@@ -402,6 +402,9 @@ SUCCESS (Hagan 2-layer simple backprop)
 <p>
   <img src="plots/nn_boats_lb_early_stopping.png">(Used 40 nodes in the hidden layer).
 <p>
+  <h5 align=right>2016 mar 28</h5>
+  Implemented comparision with OLS, ready to implement the network into the site.
+<p>
   
   
 
