Added python file to reproduce network from saved data (for boats only now).

--- a/work_logs.html
+++ b/work_logs.html
@@ -405,7 +405,15 @@ SUCCESS (Hagan 2-layer simple backprop)
   <h5 align=right>2016 mar 28</h5>
   Implemented comparision with OLS, ready to implement the network into the site.
 <p>
-  
+  <h3>Set up site</h3>
+  Working locally in new github repo (yrdeboer/boats_estimator):
+  <pre>
+    (venv3)ytsen @ y700 ~/github/boats_estimator (master)
+    $ git remote add origin git@github.com:yrdeboer/boats_estimator.git
+  </pre>
+
+  <h5 align=right>2016 mar 29</h5>
+  <h3>Reproduce net response with saved weights</h3>
   
 
   <a name="bottom"></a>
