Added possibility to track sensitivies, derivative of sum squared error to inputs

--- a/work_logs.html
+++ b/work_logs.html
@@ -414,7 +414,11 @@ SUCCESS (Hagan 2-layer simple backprop)
 
   <h5 align=right>2016 mar 29</h5>
   <h3>Reproduce net response with saved weights</h3>
-  
+  Checked plots, now able to reproduce a network from saved data:
+  <pre>
+(venv3)ytsen @ y700 ~/github/nn (master)
+└─ $ ▶ python boats/reproduce_net_from_data.py    
+  </pre>
 
   <a name="bottom"></a>
   <a href="#top">Top</a>
