Added next steps plan to work log.

--- a/work_logs.html
+++ b/work_logs.html
@@ -474,7 +474,14 @@ SUCCESS (Hagan 2-layer simple backprop)
   How much does this say about the most important input parameters ... ?
 <p>
   We should do a variance/covariance analysis ...
-  
+<p>
+  For now the top 2 things to do:
+  <ol>
+    <li>Do a covariance analysis on the input features</li>
+    <li>
+      Check the effect of the input features on the output and compare with the results
+      from the covariance analysis.
+    </li>
 
 
 
